# mai-ai-frameworks

./: .gitignore  0_datasets.ipynb  1_knn.ipynb  2_regression.ipynb  3_decision_tree.ipynb  4_random_forest.ipynb  5_gradient_boosting.ipynb  README.md  pyproject.toml
